# hft-engine

./: .gitignore  BENCHMARK_VERIFICATION.md  BUILD_PLAN.md  CMakeLists.txt  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_BUILD_SUMMARY.md  QUICKSTART.md  README.md
1_orderbook/: CMakeLists.txt
1_orderbook/bench/: bench_mpsc.cpp  bench_orderbook.cpp  bench_profiling.cpp  bench_realistic.cpp  bench_spsc.cpp
1_orderbook/include/: hazard_pointers.hpp  mpsc_queue.hpp  order.hpp  order_book.hpp  price_level.hpp  spsc_queue.hpp  tsc_clock.hpp
1_orderbook/src/: order_book.cpp  tsc_clock.cpp
1_orderbook/tests/: test_mpsc.cpp  test_orderbook.cpp  test_spsc.cpp
2_network/: CMakeLists.txt  build_bpf.sh
2_network/bench/: bench_af_xdp.cpp  bench_fix_pipeline.cpp
2_network/bpf/: xdp_fix_redirect.c
2_network/ebpf/: redirect.bpf.c
2_network/include/: fix_message.hpp  umem.hpp  xsk_socket.hpp
2_network/src/: fix_message.cpp  umem.cpp  xsk_socket.cpp
2_network/tests/: test_fix_parser.cpp
3_fpga/: README.md  vivado_build.tcl
3_fpga/rtl/: fix_parser.v
3_fpga/tb/: fix_parser_tb.v
docs/: ARCHITECTURE.md  benchmark_results.md  benchmarks.md  design_decisions.md  latency_model.md  literature_comparison.md  realistic_vs_synthetic.md  skeleton.md
results/20260708_150517/: benchmarks_log.txt  build_log.txt  perf_stat_bench_spsc.txt  system_info.txt  unit_tests.txt
results/20260708_160652/: benchmarks_log.txt  build_log.txt  perf_stat_bench_fix_pipeline.txt  perf_stat_bench_mpsc.txt  perf_stat_bench_orderbook.txt  perf_stat_bench_profiling.txt  perf_stat_bench_realistic.txt  perf_stat_bench_spsc.txt  system_info.txt  unit_tests.txt
results/20260708_164917/: benchmarks_log.txt  build_log.txt  perf_stat_bench_fix_pipeline.txt  perf_stat_bench_mpsc.txt  perf_stat_bench_orderbook.txt  perf_stat_bench_profiling.txt  perf_stat_bench_realistic.txt  perf_stat_bench_spsc.txt  system_info.txt  unit_tests.txt
results/20260708_172505/: benchmarks_log.txt  build_log.txt  perf_stat_bench_af_xdp.txt  perf_stat_bench_fix_pipeline.txt  perf_stat_bench_mpsc.txt  perf_stat_bench_orderbook.txt  perf_stat_bench_profiling.txt  perf_stat_bench_realistic.txt  perf_stat_bench_spsc.txt  system_info.txt  unit_tests.txt
results/20260708_213818/: build_log.txt  system_info.txt  unit_tests.txt
scripts/: full_test.sh  pin_cpu.sh  run_benchmarks.sh  setup_hugepages.sh
